<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bbdefb"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">



    <!--<android.support.v4.widget.NestedScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->


    <TextView
        android:id="@+id/email_register"
        android:textSize="36dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:clickable="true"
        android:padding="8dp"
        android:text="@string/f_title"
        android:layout_marginTop="20dp"
        />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/loginfb_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <!--<com.google.android.gms.common.SignInButton-->
    <!--android:id="@+id/google_sign_in"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_marginBottom="@dimen/fantain_small_pad_mar"-->
    <!--android:layout_height="wrap_content"/>-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userinfof"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/email_register"/>
    <Button
        android:id="@+id/fb_login"
        android:drawableLeft="@drawable/ic_facebook_24dp"
        android:drawableStart="@drawable/ic_facebook_24dp"

        android:layout_width="match_parent"
        android:background="#3b5998"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/facebook_login_string"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/email_register"/>

    <Button
        android:id="@+id/fb_logout"
        android:drawableLeft="@drawable/ic_facebook_24dp"
        android:drawableStart="@drawable/ic_facebook_24dp"

        android:layout_width="match_parent"
        android:background="#3b5998"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/facebook_logout_string"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/email_register"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userinfog"
        android:visibility="gone"
        android:layout_marginTop="110dp"
        android:layout_below="@+id/email_register"/>
    <Button
        android:id="@+id/google_login"
        android:drawableLeft="@drawable/ic_google_24dp"
        android:drawableStart="@drawable/ic_google_24dp"
        android:layout_width="match_parent"
        android:background="#f44336"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/google_login_string"
        android:layout_marginTop="130dp"
        android:layout_below="@+id/email_register"/>




    <Button
        android:id="@+id/google_sign_out"
        android:drawableLeft="@drawable/ic_google_24dp"
        android:drawableStart="@drawable/ic_google_24dp"
        android:layout_width="match_parent"
        android:background="#f44336"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/f_soffgoogle"
        android:visibility="gone" android:layout_marginTop="130dp"
        android:layout_below="@+id/email_register"/>

    <!--</android.support.v4.widget.NestedScrollView>-->
</RelativeLayout>